--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "clipboard": "^2.0.6",
-    "fetch-jsonp": "^1.1.3"
-  }
+  "dependencies": {}
 }
